# Autoscript2

./: .gitignore  Cargo.toml  README.md  ignore_list.txt  readme.md
src/: filemanager.rs  main.rs
